移除 actuator; 启动脚本设置 JVM 参数; password hash 改为 sha512